utc-App-project/sg.tf



resource "aws_security_group" "sg1" {
    
    description = "allow ssh and htppd"
    vpc_id = aws_vpc.vpc1.id
    
  
  ingress {
    description = "allow ssh"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

ingress {
        description = "allow http"
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
}

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  tags = {
    env = "Dev"
    name = "web-sg"
  }

  depends_on = [ aws_vpc.vpc1 ]

}
